// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`binotype.Context > create(simonmika.com, '/', undefined) > context.load 1`] = `
{
  "articles": [
    {
      "id": "takingRiskWhenDying",
      "link": "/article/taking-risk-when-dying",
      "list": {
        "mode": "header",
      },
      "menu": true,
      "mode": "header",
      "published": "2017-08-23T09:15:00+02:00",
      "title": {
        "formatted": "Taking Risk When Dying",
        "plain": "Taking Risk When Dying",
      },
    },
    {
      "id": "optimizingSoftware",
      "link": "/article/optimizing-software",
      "list": {
        "mode": "header",
      },
      "menu": true,
      "mode": "header",
      "published": "2016-11-24T08:15:46+02:00",
      "title": {
        "formatted": "Optimizing Software",
        "plain": "Optimizing Software",
      },
    },
    {
      "id": "naming",
      "link": "/article/naming",
      "list": {
        "mode": "header",
      },
      "menu": true,
      "mode": "header",
      "published": "2016-10-27T16:12:00+02:00",
      "title": {
        "formatted": "Naming",
        "plain": "Naming",
      },
    },
    {
      "id": "programmingInterview",
      "link": "/article/programming-interview",
      "list": {
        "mode": "header",
      },
      "menu": true,
      "mode": "header",
      "published": "2016-10-05T17:32:00+02:00",
      "title": {
        "formatted": "The Programming Interview",
        "plain": "The Programming Interview",
      },
    },
    {
      "id": "recruitingProcess",
      "link": "/article/recruiting-process",
      "list": {
        "mode": "header",
      },
      "menu": true,
      "mode": "header",
      "published": "2016-09-27T23:18:43+02:00",
      "title": {
        "formatted": "Recruiting Process",
        "plain": "Recruiting Process",
      },
    },
    {
      "id": "rockStarProgrammers",
      "link": "/article/rock-star-programmers",
      "list": {
        "mode": "header",
      },
      "menu": true,
      "mode": "header",
      "published": "2016-09-27T23:18:43+02:00",
      "title": {
        "formatted": "Rock Star Programmers",
        "plain": "Rock Star Programmers",
      },
    },
    {
      "id": "toLive",
      "link": "/article/to-live",
      "list": {
        "mode": "header",
      },
      "menu": true,
      "mode": "header",
      "published": "2016-08-18T21:31:21+02:00",
      "title": {
        "formatted": "To Live",
        "plain": "To Live",
      },
    },
  ],
  "id": "article",
  "link": "/article",
  "list": {
    "mode": "header",
  },
  "menu": true,
  "mode": "full",
  "title": {
    "formatted": "Articles",
    "plain": "Articles",
  },
}
`;

exports[`binotype.Context > create(simonmika.com, '/about', undefined) > context.load 1`] = `
{
  "author": "Simon Mika",
  "content": "I am Simon Mika, and I create things. Professionally I create software products. Either hands on or by creating the organization that builds the products.
I live in Uppsala, Sweden with my wife Sannah and my four kids in a house from 1937 that we have been renovating since 2009.
I write about building software and building companies.
Currently, I help companies as a consultant with everything from software architecture to business development. If you are interested in my services please contact me. When I don't work for money I also spend time on SysPL and TypeUp.
You can find out more about me on my page on LinkedIn and on GitHub.
",
  "id": "about",
  "link": "/about",
  "list": {
    "mode": "header",
  },
  "menu": true,
  "mode": "full",
  "subtitle": [
    "About Simon Mika",
  ],
  "title": {
    "formatted": "About",
    "plain": "About",
  },
}
`;

exports[`binotype.Context > create(simonmika.com, '/article', { list: { limit: 5 } }) > context.load 1`] = `
{
  "articles": [
    {
      "id": "takingRiskWhenDying",
      "link": "/article/taking-risk-when-dying",
      "list": {
        "limit": 5,
        "mode": "header",
      },
      "menu": true,
      "mode": "header",
      "published": "2017-08-23T09:15:00+02:00",
      "title": {
        "formatted": "Taking Risk When Dying",
        "plain": "Taking Risk When Dying",
      },
    },
    {
      "id": "optimizingSoftware",
      "link": "/article/optimizing-software",
      "list": {
        "limit": 5,
        "mode": "header",
      },
      "menu": true,
      "mode": "header",
      "published": "2016-11-24T08:15:46+02:00",
      "title": {
        "formatted": "Optimizing Software",
        "plain": "Optimizing Software",
      },
    },
    {
      "id": "naming",
      "link": "/article/naming",
      "list": {
        "limit": 5,
        "mode": "header",
      },
      "menu": true,
      "mode": "header",
      "published": "2016-10-27T16:12:00+02:00",
      "title": {
        "formatted": "Naming",
        "plain": "Naming",
      },
    },
    {
      "id": "programmingInterview",
      "link": "/article/programming-interview",
      "list": {
        "limit": 5,
        "mode": "header",
      },
      "menu": true,
      "mode": "header",
      "published": "2016-10-05T17:32:00+02:00",
      "title": {
        "formatted": "The Programming Interview",
        "plain": "The Programming Interview",
      },
    },
    {
      "id": "recruitingProcess",
      "link": "/article/recruiting-process",
      "list": {
        "limit": 5,
        "mode": "header",
      },
      "menu": true,
      "mode": "header",
      "published": "2016-09-27T23:18:43+02:00",
      "title": {
        "formatted": "Recruiting Process",
        "plain": "Recruiting Process",
      },
    },
  ],
  "id": "article",
  "link": "/article",
  "list": {
    "limit": 5,
    "mode": "header",
  },
  "menu": true,
  "mode": "full",
  "title": {
    "formatted": "Articles",
    "plain": "Articles",
  },
}
`;

exports[`binotype.Context > create(simonmika.com, '/article', undefined) > context.load 1`] = `
{
  "articles": [
    {
      "id": "takingRiskWhenDying",
      "link": "/article/taking-risk-when-dying",
      "list": {
        "mode": "header",
      },
      "menu": true,
      "mode": "header",
      "published": "2017-08-23T09:15:00+02:00",
      "title": {
        "formatted": "Taking Risk When Dying",
        "plain": "Taking Risk When Dying",
      },
    },
    {
      "id": "optimizingSoftware",
      "link": "/article/optimizing-software",
      "list": {
        "mode": "header",
      },
      "menu": true,
      "mode": "header",
      "published": "2016-11-24T08:15:46+02:00",
      "title": {
        "formatted": "Optimizing Software",
        "plain": "Optimizing Software",
      },
    },
    {
      "id": "naming",
      "link": "/article/naming",
      "list": {
        "mode": "header",
      },
      "menu": true,
      "mode": "header",
      "published": "2016-10-27T16:12:00+02:00",
      "title": {
        "formatted": "Naming",
        "plain": "Naming",
      },
    },
    {
      "id": "programmingInterview",
      "link": "/article/programming-interview",
      "list": {
        "mode": "header",
      },
      "menu": true,
      "mode": "header",
      "published": "2016-10-05T17:32:00+02:00",
      "title": {
        "formatted": "The Programming Interview",
        "plain": "The Programming Interview",
      },
    },
    {
      "id": "recruitingProcess",
      "link": "/article/recruiting-process",
      "list": {
        "mode": "header",
      },
      "menu": true,
      "mode": "header",
      "published": "2016-09-27T23:18:43+02:00",
      "title": {
        "formatted": "Recruiting Process",
        "plain": "Recruiting Process",
      },
    },
    {
      "id": "rockStarProgrammers",
      "link": "/article/rock-star-programmers",
      "list": {
        "mode": "header",
      },
      "menu": true,
      "mode": "header",
      "published": "2016-09-27T23:18:43+02:00",
      "title": {
        "formatted": "Rock Star Programmers",
        "plain": "Rock Star Programmers",
      },
    },
    {
      "id": "toLive",
      "link": "/article/to-live",
      "list": {
        "mode": "header",
      },
      "menu": true,
      "mode": "header",
      "published": "2016-08-18T21:31:21+02:00",
      "title": {
        "formatted": "To Live",
        "plain": "To Live",
      },
    },
  ],
  "id": "article",
  "link": "/article",
  "list": {
    "mode": "header",
  },
  "menu": true,
  "mode": "full",
  "title": {
    "formatted": "Articles",
    "plain": "Articles",
  },
}
`;

exports[`binotype.Context > create(simonmika.com, '/article/to-live', undefined) > context.load 1`] = `
{
  "content": "Life is about three fundamental activities:
These three pillars are deeply interconnected. When we create, we inevitably learn from the process. When we learn, we become better equipped to help others. And when we help others, we often end up creating something valuable in the process.
They are all about improving ourselves and the world around us. Each day presents opportunities to engage in these activities, even in small ways. The magic happens when we consciously combine them:
> We make a living by what we get, but we make a life by what we give.
The choice is yours: Will you be a passive observer of life, or an active participant? Will you consume what others create, or contribute something of your own? Will you stay in your comfort zone, or push its boundaries?
Because tomorrow isn't guaranteed - but today's actions shape all our tomorrows.
",
  "id": "toLive",
  "link": "/article/to-live",
  "list": {
    "mode": "header",
  },
  "menu": true,
  "mode": "full",
  "published": "2016-08-18T21:31:21+02:00",
  "title": {
    "formatted": "To Live",
    "plain": "To Live",
  },
}
`;

exports[`binotype.Context > create(site, /) 1`] = `
{
  "article": {
    "articles": [
      {
        "content": "About page content",
        "id": "about",
        "link": "/about",
        "list": {
          "mode": "summary",
        },
        "menu": true,
        "mode": "summary",
        "title": {
          "formatted": "About",
          "plain": "About",
        },
      },
    ],
    "id": "",
    "link": "/",
    "list": {
      "mode": "summary",
    },
    "menu": true,
    "mode": "full",
    "title": {
      "formatted": "[]",
      "plain": "[]",
    },
  },
  "base": "https://example.com",
  "design": {
    "icon": "/favicon.ico",
    "list": "summary",
    "logotype": "/logo.svg",
    "navigation": "header",
    "scripts": [
      "/script.js",
    ],
    "styles": [
      "/style.css",
    ],
  },
  "menu": {
    "items": [
      {
        "description": "About",
        "label": "About",
        "url": "/about",
      },
    ],
  },
  "title": "Test Site",
  "url": "https://example.com/",
}
`;

exports[`binotype.Context > create(site, /about) 1`] = `
{
  "article": {
    "content": "About page content",
    "id": "about",
    "link": "/about",
    "list": {
      "mode": "summary",
    },
    "menu": true,
    "mode": "full",
    "title": {
      "formatted": "About",
      "plain": "About",
    },
  },
  "base": "https://example.com",
  "design": {
    "icon": "/favicon.ico",
    "list": "summary",
    "logotype": "/logo.svg",
    "navigation": "header",
    "scripts": [
      "/script.js",
    ],
    "styles": [
      "/style.css",
    ],
  },
  "menu": {
    "items": [
      {
        "description": "About",
        "label": "About",
        "selected": "current",
        "url": "/about",
      },
    ],
  },
  "title": "Test Site",
  "url": "https://example.com/about",
}
`;

exports[`binotype.Context > create(site, /nonexistent) 1`] = `
{
  "article": {
    "id": "nonexistent",
    "link": "/nonexistent",
    "list": {
      "mode": "full",
    },
    "menu": true,
    "mode": "full",
    "title": {
      "formatted": "Not Found",
      "plain": "Not Found",
    },
  },
  "base": "https://example.com",
  "design": {
    "icon": "/favicon.ico",
    "list": "summary",
    "logotype": "/logo.svg",
    "navigation": "header",
    "scripts": [
      "/script.js",
    ],
    "styles": [
      "/style.css",
    ],
  },
  "menu": {
    "items": [
      {
        "description": "About",
        "label": "About",
        "url": "/about",
      },
    ],
  },
  "title": "Test Site",
  "url": "https://example.com/nonexistent",
}
`;

exports[`binotype.Context > create(site, invalid-path) 1`] = `
{
  "article": {
    "id": "invalidPath",
    "link": "/invalid-path",
    "list": {
      "mode": "full",
    },
    "menu": true,
    "mode": "full",
    "title": {
      "formatted": "Not Found",
      "plain": "Not Found",
    },
  },
  "base": "https://example.com",
  "design": {
    "icon": "/favicon.ico",
    "list": "summary",
    "logotype": "/logo.svg",
    "navigation": "header",
    "scripts": [
      "/script.js",
    ],
    "styles": [
      "/style.css",
    ],
  },
  "menu": {
    "items": [
      {
        "description": "About",
        "label": "About",
        "url": "/about",
      },
    ],
  },
  "title": "Test Site",
  "url": "https://example.com/invalid-path",
}
`;
